--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="icon" type="image/svg+xml" href="./src/assets/logo.svg" />
 
   <!-- Meta tags -->
-  <title>Tasky AI – AI-Powered To-Do List & Project Management App</title>
+  <title>TaskBot AI – AI-Powered To-Do List & Project Management App</title>
   <meta name="description"
-    content="Tasky AI helps you stay organized effortlessly. Create to-do lists, manage projects, and generate task lists with AI-powered precision. Perfect for boosting productivity - try it free today!">
+    content="TaskBot AI helps you stay organized effortlessly. Create to-do lists, manage projects, and generate task lists with AI-powered precision. Perfect for boosting productivity - try it free today!">
   <meta name="keywords"
     content="to-do list app, task management app, AI task generator, project management tool, productivity app">
 
